--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = ["crates/blockifier", "crates/native_blockifier"]
 assert_matches = { version = "1.5.0" }
 cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs.git", rev = "eaea41fe" }
 ctor = "0.2.0"
+cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "b16a151" }
 derive_more = { version = "0.99.17" }
 hex = { version = "0.4.3" }
 indexmap = { version = "1.9.2" }
